# OOP_LABS

./: CMakeLists.txt  main.cpp
include/: 4_class.hpp
lab-5/: CMakeLists.txt  main.cpp
lab-5/include/: custom_memory_resource.h  my_struct.h  pmr_list.h
lab-5/src/: custom_memory_resource.cpp  my_struct.cpp  pmr_list.cpp
lab-5/tests/: tests.cpp
src/: 4_class.cpp
